src/maria-db.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: default
  labels:
    app: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      nodeSelector:
        kubernetes.io/hostname: bedroom
      containers:
        - name: mariadb
          image: mariadb:11.4
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mariadb-data
              mountPath: /var/lib/mysql
      volumes:
        - name: mariadb-data
          hostPath:
            path: /home/samuel/mariadb
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: mariadb
  ports:
    - port: 3306
      targetPort: 3306
      name: mysql
