src/wordpress-migration-access.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-migration-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: wordpress
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
      name: http
