src/adguard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard-home
  namespace: default
  labels:
    app: adguard-home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard-home
  template:
    metadata:
      labels:
        app: adguard-home
    spec:
      # Directs the pod to use the Ubuntu node's network interfaces directly
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      nodeSelector:
        kubernetes.io/hostname: bedroom
      containers:
        - name: adguard-home
          image: adguard/adguardhome:latest
          ports:
            - containerPort: 53
              protocol: UDP
              name: dns-udp
            - containerPort: 53
              protocol: TCP
              name: dns-tcp
            - containerPort: 3333
              protocol: TCP
              name: web-admin
          volumeMounts:
            - name: adguard-conf
              mountPath: /opt/adguardhome/conf
            - name: adguard-work
              mountPath: /opt/adguardhome/work
      volumes:
        - name: adguard-conf
          hostPath:
            path: /home/samuel/adguard/conf
            type: DirectoryOrCreate
        - name: adguard-work
          hostPath:
            path: /home/samuel/adguard/work
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: adguard-home
  ports:
    - port: 53
      protocol: UDP
      targetPort: 53
      name: dns-udp
    - port: 53
      protocol: TCP
      targetPort: 53
      name: dns-tcp
    - port: 3333
      protocol: TCP
      targetPort: 3333
      name: web-admin
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-home-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - adguard.samuelwgross.com
      secretName: general-tls
  rules:
    - host: adguard.samuelwgross.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard-home-service
                port:
                  number: 3333
