src/football.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: football
  namespace: default
  labels:
    app: football
spec:
  replicas: 1
  selector:
    matchLabels:
      app: football
  template:
    metadata:
      labels:
        app: football
    spec:
      nodeSelector:
        kubernetes.io/hostname: bedroom
      containers:
        - name: football
          image: ghcr.io/haitifan03/football-reviews:latest
          ports:
            - containerPort: 3000
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: football-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: football
  ports:
    - port: 3000
      targetPort: 3000
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: football-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - samuelwgross.com
      secretName: general-tls
  rules:
    - host: football.samuelwgross.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: football-service
                port:
                  number: 3000
