src/mattermost.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mattermost
  namespace: default
  labels:
    app: mattermost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mattermost
  template:
    metadata:
      labels:
        app: mattermost
    spec:
      nodeSelector:
        kubernetes.io/hostname: bedroom
      containers:
        - name: mattermost
          image: mattermost/mattermost-team-edition:latest
          ports:
            - containerPort: 8065
              name: http
          volumeMounts:
            - name: mattermost-data
              mountPath: /mattermost/data
            - name: mattermost-config
              mountPath: /mattermost/config
            - name: mattermost-plugins
              mountPath: /mattermost/plugins
            - name: mattermost-client-plugins
              mountPath: /mattermost/client/plugins
      volumes:
        - name: mattermost-data
          hostPath:
            path: /home/samuel/mattermost/data
            type: DirectoryOrCreate
        - name: mattermost-config
          hostPath:
            path: /home/samuel/mattermost/config
            type: DirectoryOrCreate
        - name: mattermost-plugins
          hostPath:
            path: /home/samuel/mattermost/plugins
            type: DirectoryOrCreate
        - name: mattermost-client-plugins
          hostPath:
            path: /home/samuel/mattermost/client-plugins
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: mattermost-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: mattermost
  ports:
    - port: 8065
      targetPort: 8065
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mattermost-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mattermost.samuelwgross.com
      secretName: general-tls
  rules:
    - host: mattermost.samuelwgross.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mattermost-service
                port:
                  number: 8065
