src/nextcloud.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: default
  labels:
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      nodeSelector:
        kubernetes.io/hostname: bedroom
      containers:
        - name: nextcloud
          image: nextcloud:latest
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: nextcloud-data
              mountPath: /var/www/html

      volumes:
        - name: nextcloud-data
          hostPath:
            path: /home/samuel/nextcloud
            type: DirectoryOrCreate

---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: nextcloud
  ports:
    - port: 80
      targetPort: 80
      name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nextcloud.samuelwgross.com
      secretName: general-tls
  rules:
    - host: nextcloud.samuelwgross.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud-service
                port:
                  number: 80
